yamls/cluster-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: nextcloud
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: files.mysite.test
    http:
      paths:
      - path: /
        backend:
          serviceName: nextcloud-server
          servicePort: 80
